# mp3_data_reader

./: CMakeLists.txt  README.md  main.cpp  read_mp3_tags.cpp  read_mp3_tags.h
